# connector-service

./: .coderabbit.yaml  .dockerignore  .gitignore  .typos.toml  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  checkout_integration_summary.md  connector_integration_macros.md  error.md  error_build.md  macro_framework.md  rsync_implementation_guide.md  typos.toml
.cline.mb/: activeContext.md  productContext.md  progress.md  (+3 more)
backend/cards/: Cargo.toml
backend/cards/src/: lib.rs  validate.rs
backend/common_utils/: Cargo.toml
backend/common_utils/src/: consts.rs  crypto.rs  custom_serde.rs  errors.rs  event_publisher.rs  events.rs  ext_traits.rs  fp_utils.rs  global_id.rs  id_type.rs  lib.rs  lineage.rs  macros.rs  new_types.rs  pii.rs  request.rs  types.rs
backend/common_utils/src/global_id/: customer.rs  payment.rs  payment_methods.rs  refunds.rs  token.rs
backend/connector-integration/: Cargo.toml
backend/connector-integration/.cline.mb/: componentPatterns.md  componentProgress.md  localContext.md
backend/connector-integration/src/: connectors.rs  lib.rs  types.rs  utils.rs
backend/connector-integration/src/connectors/: adyen.rs  airwallex.rs  authorizedotnet.rs  bitpay.rs  cashfree.rs  cashtocode.rs  checkout.rs  elavon.rs  fiserv.rs  fiuu.rs  jpmorgan.rs  macros.rs  mifinity.rs  nexinets.rs  noon.rs  novalnet.rs  paypal.rs  paytm.rs  payu.rs  phonepe.rs  razorpay.rs  razorpayv2.rs  xendit.rs
backend/connector-integration/src/connectors/adyen/: test.rs  transformers.rs
backend/connector-integration/src/connectors/airwallex/: transformers.rs
backend/connector-integration/src/connectors/authorizedotnet/: transformers.rs
backend/connector-integration/src/connectors/bitpay/: test.rs  transformers.rs
backend/connector-integration/src/connectors/cashfree/: test.rs  transformers.rs
backend/connector-integration/src/connectors/cashtocode/: transformers.rs
backend/connector-integration/src/connectors/checkout/: test.rs  transformers.rs
backend/connector-integration/src/connectors/elavon/: test.rs  transformers.rs
backend/connector-integration/src/connectors/fiserv/: test.rs  transformers.rs
backend/connector-integration/src/connectors/fiuu/: transformers.rs
backend/connector-integration/src/connectors/jpmorgan/: test.rs  transformers.rs
backend/connector-integration/src/connectors/mifinity/: transformers.rs
backend/connector-integration/src/connectors/nexinets/: transformers.rs
backend/connector-integration/src/connectors/noon/: transformers.rs
backend/connector-integration/src/connectors/novalnet/: transformers.rs
backend/connector-integration/src/connectors/paypal/: test.rs  transformers.rs
backend/connector-integration/src/connectors/paytm/: transformers.rs
backend/connector-integration/src/connectors/payu/: transformers.rs
backend/connector-integration/src/connectors/phonepe/: constants.rs  headers.rs  transformers.rs
backend/connector-integration/src/connectors/razorpay/: test.rs  tests.rs  transformers.rs
backend/connector-integration/src/utils/: xml_utils.rs
backend/domain_types/: Cargo.toml
backend/domain_types/.cline.mb/: componentPatterns.md  componentProgress.md  localContext.md
backend/domain_types/src/: api.rs  connector_flow.rs  connector_types.rs  errors.rs  lib.rs  mandates.rs  payment_address.rs  payment_method_data.rs  router_data.rs  router_data_v2.rs  router_request_types.rs  router_response_types.rs  types.rs  utils.rs
backend/external-services/: Cargo.toml
backend/external-services/.cline.mb/: componentPatterns.md  componentProgress.md  localContext.md
backend/external-services/src/: errors.rs  lib.rs  service.rs  shared_metrics.rs
backend/grpc-api-types/: Cargo.toml  Makefile  buf.yaml  build.rs
backend/grpc-api-types/proto/: customer.proto  health_check.proto  payment.proto  payment_method.proto  payment_methods.proto  refund.proto  services.proto
backend/grpc-api-types/src/: lib.rs
backend/grpc-server/: Cargo.toml  build.rs
backend/grpc-server/.cline.mb/: componentPatterns.md  componentProgress.md  localContext.md
backend/grpc-server/src/: app.rs  configs.rs  consts.rs  domain_types.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  server.rs  utils.rs
backend/grpc-server/src/logger/: config.rs  env.rs  formatter.rs  setup.rs  storage.rs
backend/grpc-server/src/server/: disputes.rs  health_check.rs  payments.rs  refunds.rs
backend/grpc-server/tests/: adyen_dispute_webhook_test.rs  authorizedotnet_payment_flows_test.rs  authorizedotnet_webhook_test.rs  cashtocode_payment_flows_test.rs  checkout_payment_flows_test.rs  common.rs  elavon_payment_flows_test.rs  fiserv_payment_flows_test.rs  fiuu_payment_flows_test.rs  mifinity_payment_flows_test.rs  nexinets_payment_flows_test.rs  noon_payment_flows_test.rs  novalnet_payment_flows_test.rs  test_amount_conversion.rs  test_config_override.rs  test_currency.rs  test_health.rs  xendit_payment_flows_test.rs
backend/interfaces/: Cargo.toml
backend/interfaces/src/: api.rs  authentication.rs  connector_integration_v2.rs  connector_types.rs  errors.rs  integrity.rs  lib.rs  routing.rs  types.rs  verification.rs  webhooks.rs
backend/interfaces/src/events/: connector_api_logs.rs  routing_api_logs.rs
backend/tracing-kafka/: Cargo.toml  README.md
backend/tracing-kafka/src/: builder.rs  layer.rs  lib.rs  metrics.rs  writer.rs
client-sdk/example-mcp/: .env.example  README.md  payments.py  pyproject.toml
examples/example-cli/: Cargo.toml  README.md
examples/example-cli/samples/: adyen_cred.json  adyen_payment.json  mastercard_payment.json  payment_sync.json  razorpay_cred.json  razorpay_payment.json
examples/example-cli/tests/: checkout_grpcurl_test.sh
examples/example-hs-grpc/: .gitignore  README.md  example-hs-grpc.cabal
examples/example-hs-grpc/app/: Client.hs
examples/example-hs-grpc/proto/: payment.proto
examples/example-tui/: Cargo.toml
examples/example-tui/src/: main.rs
sdk/python-grpc-client/: Makefile  README.md  pyproject.toml
sdk/python-grpc-client/src/python_grpc_client/: __init__.py
(+109 files in other folders)
