[workspace]
resolver = "3"
members = [
  "backend/grpc-api-types",
  "backend/connector-integration",
  "backend/external-services",
  "backend/grpc-server"
]
exclude = [
  "client-sdk/example-rs",
  "client-sdk/example-tui",
  "client-sdk/example-cli"
]


[profile.release]
strip = true
lto = true
codegen-units = 1
