[workspace]
resolver = "2"
members = [
  "backend/grpc-api-types",
  "backend/connector-integration",
  "backend/external-services",
  "backend/grpc-server", 
  "sdk/rust-grpc-client",
  "backend/common_enums",
  "backend/common_utils",
  "backend/interfaces",
  "backend/domain_types",
  "backend/tracing-kafka"
]
exclude = [
  "examples/example-rs",
  "examples/example-tui",
  "examples/example-cli"
]


[profile.release]
strip = true
lto = true
codegen-units = 1


[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 } # Remove priority once https://github.com/rust-lang/rust-clippy/pull/12827 is available in stable clippy
unused_qualifications = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
as_conversions = "warn"
expect_used = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
large_futures = "warn"
missing_panics_doc = "warn"
out_of_bounds_indexing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

# Lints to allow
option_map_unit_fn = "allow"
