[package]
name = "connector-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_types = { path = "../domain_types" }
base64 = "0.21"
common_enums = { path = "../common_enums" }
common_utils = { path = "../common_utils" }
interfaces = { path = "../interfaces"}
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "masking" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
uuid = { version = "1", features = ["v4"] }
error-stack = "0.4.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3.35"
url = "2.5.0"
cards = {  path = "../cards"}
paste = "1.0"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
bytes = "1.6.0"
ring = "0.17" 
quick-xml = { version = "0.31.0", features = ["serialize"] }
tracing = { version = "0.1.40" }