[package]
name = "domain_types"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-api-types = { path = "../grpc-api-types" }
common_enums = { path = "../common_enums" }
cards = { path = "../cards" }
common_utils = { path = "../common_utils" }

hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "masking" }
router_derive = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4" } # verify this can be from framework-libs-rs

#third party dependencies
thiserror = "1.0.49"
strum = { version = "0.26", features = ["derive"] }
serde = {version = "1.0.189" ,features = ["derive"]}
serde_json = "1.0.107"
error-stack = "0.4.1"


utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known", "std"] }
url = { version = "2.5.4", features = ["serde"] }
http = "0.2.12"
actix-web = { version = "4.11.0", optional = true }


[features]
default = ["actix-web"]
actix-web = ["dep:actix-web"]