[package]
name = "external-services"
version = "0.1.0"
edition = "2021"

[dependencies]

error-stack = "0.4.1"
serde = {version = "1.0.189" ,features = ["derive"]}
thiserror = "1.0.49"
clap = { version = "4.0", features = ["derive"] }
config = "0.14.0"  
serde_derive = "1.0"
serde_yaml = "0.8"  
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
mime = "0.3.17"
serde_json = "1.0.107"
hex = "0.4.3"
ring = { version = "0.17.8", features = ["std"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
base64 = "0.21.2"
bytes = "1.6.0"
http = "1.2.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
async-trait = "0.1"
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-attributes = "0.1.27"
tonic = "0.13.1"
prometheus = "0.13.4"
tower = "0.5.2"
hyper = "1.6.0"
http-body = "1.0.1"
domain_types = { path = "../domain_types"}
interfaces = { path = "../interfaces" }
common_utils = { path = "../common_utils", features = ["async_ext"] }
masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "masking"}
