[package]
name = "grpc-api-types"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.13.0"
axum = "0.8.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }

error-stack = "0.5.0"

[build-dependencies]
tonic-build = "0.13.0"
prost-build = "0.13.4"
heck = "0.5.0"
g2h = { git = "https://github.com/NishantJoshi00/g2h", branch = "fixing-response-serializing" }
