[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 } # Remove priority once https://github.com/rust-lang/rust-clippy/pull/12827 is available in stable clippy
unused_qualifications = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"

[lints.clippy]
as_conversions = "warn"
expect_used = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
large_futures = "warn"
match_on_vec_items = "warn"
missing_panics_doc = "warn"
out_of_bounds_indexing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

# Lints to allow
option_map_unit_fn = "allow"

[dependencies]
# First-party dependencies
grpc-api-types = { version = "0.1.0", path = "../grpc-api-types" }
connector-integration = { version = "0.1.0", path = "../connector-integration" }
external-services = { version = "0.1.0", path = "../external-services" }
domain_types = { version = "0.1.0", path = "../domain_types" }

# Third-party dependencies
config = "0.14.0"
error-stack = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.16"
thiserror = "1.0.49"
time = { version = "0.3.36", features = ["parsing"] }
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-attributes = "0.1.27"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.13.0"
tonic-reflection = "0.13.0"
hyper = "1.6.0"
tower-http = { version = "0.6.2", features = ["trace", "request-id"] }
tower = "0.5.2"
http = "1.2.0"
lazy_static = "1.5.0"
axum = { version = "0.8.3", features = ["macros"] }
prometheus = "0.13.4"
base64 = "0.21.2"
rustc-hash = "2.0"
gethostname = "0.5.0"
once_cell = "1.19.0"
hyperswitch_interfaces = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4"}
hyperswitch_domain_models = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4"}
hyperswitch_cards = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "cards"}
hyperswitch_common_enums = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "common_enums"}
hyperswitch_common_utils = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "common_utils"}
hyperswitch_api_models = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "api_models"}

[build-dependencies]
cargo_metadata = "0.15.4"

[dev-dependencies]
tokio-stream = { version = "0.1.17", features = ["net"] }
tower = { version = "0.5.2" }
tempfile = "3.19.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }
