[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# First-party dependencies
grpc-api-types = { path = "../grpc-api-types" }
connector-integration = { path = "../connector-integration" }
external-services = { path = "../external-services" }
domain_types = { path = "../domain_types" }
interfaces = { path = "../interfaces" }
cards = { path = "../cards" }
common_enums = { path = "../common_enums" }
common_utils = { path = "../common_utils" }

# Third-party dependencies
config = "0.14.0"
error-stack = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.16"
thiserror = "1.0.49"
time = { version = "0.3.36", features = ["parsing"] }
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-attributes = "0.1.27"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.13.0"
tonic-reflection = "0.13.0"
hyper = "1.6.0"
tower-http = { version = "0.6.2", features = ["trace", "request-id"] }
tower = "0.5.2"
http = "1.2.0"
lazy_static = "1.5.0"
axum = { version = "0.8.3", features = ["macros"] }
prometheus = "0.13.4"
base64 = "0.21.2"
rustc-hash = "2.0"
gethostname = "0.5.0"
once_cell = "1.19.0"
log_utils = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "log_utils", features = ["tracing"] }
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "build_info", features = ["cargo-workspace", "framework-libs-members-env"] }

[build-dependencies]
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "build_info", features = ["cargo-workspace-build", "vergen-gix-build", "framework-libs-members-env"] }

[dev-dependencies]
tokio-stream = { version = "0.1.17", features = ["net"] }
tower = { version = "0.5.2" }
tempfile = "3.19.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }


[lints]
workspace = true
