[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]

common_utils = { path = "../common_utils" }
common_enums = { path = "../common_enums" }
domain_types = { path = "../domain_types"}

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"


hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.116.0", package = "masking" }


utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
mime = "0.3.17"
http = "0.2.12"
thiserror = "1.0.69"
bytes = "1.10.1"
time = "0.3.41"
tracing-actix-web = "0.7.18"
async-trait = "0.1.88"
actix-web = "4.11.0"

error-stack = "0.4.1"

[lints]
workspace = true