[project]
name = "example-mcp"
version = "0.1.0"
description = "Example MCP Server for Payment Processing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp-server>=0.1.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.1"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]