[package]
name = "example-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
tonic = "0.12.2"
prost = "0.12"                               # Protobuf implementation (dependency of tonic)
anyhow = "1.0"                               # Flexible error handling
strum = { version = "0.26", features = ["derive"] } # Enum string parsing
strum_macros = "0.26"
chrono = "0.4"                               # Timestamps
clap = { version = "4.5", features = ["derive"] } # Command line argument parsing
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON parsing

# --- Add your gRPC types crate here ---
grpc-api-types = { path = "../../backend/grpc-api-types" }

[[bin]]
name = "jus"
