cabal-version:      3.0
name:               example-hs-grpc
version:            0.1.0
extra-source-files: proto/payment.proto
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

common lang
  build-depends:    base >= 4.14 && < 5
                  ,  proto-lens
                  , proto-lens-runtime
                  , lens-family
                  ,bytestring
                  , random
                  , exceptions
                  , mtl
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      DataKinds
      OverloadedLabels
      OverloadedStrings
      TypeApplications
      TypeFamilies

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , grapesy            >= 1.0 && < 1.1
    , proto-lens-runtime >= 0.7 && < 0.8
  exposed-modules:
      Proto.Payment
      Proto.Payment_Fields
  autogen-modules:
      Proto.Payment
      Proto.Payment_Fields

executable grpc_client
  import:         lang
  main-is:        Client.hs
  hs-source-dirs: app
  ghc-options:    -main-is Client
  build-depends:  example-hs-grpc

  build-depends:
      -- inherited
    , grapesy
    ,text
    ,network