[package]
name = "example-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
tonic = "0.12.2"
prost = "0.12"                               # Protobuf implementation (dependency of tonic)
anyhow = "1.0"                               # Flexible error handling
shelgon = "0.2"                              # REPL library
strum = { version = "0.26", features = ["derive"] } # Enum string parsing
strum_macros = "0.26"
chrono = "0.4"                               # Timestamps (optional)

# --- Add your gRPC types crate here ---
grpc-api-types = { path = "../../backend/grpc-api-types" }

# [build-dependencies] # --- REMOVE this section ---
# tonic-build = "0.11"
