[project]
name = "python-grpc-client"
version = "0.1.0"
description = "Python client for the connector service"
readme = "README.md"
authors = [
]
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
